--- a/home_work_2/Style.css
+++ b/home_work_2/Style.css
@@ -14,12 +14,8 @@
     margin: 20px 0;
 }
 
-.nav {
-    transform: scale(0.1);
-}
-
 .nav:hover {
-    transform: scale(0.7);
+    font-size: 20px;
 }
 
 .center-img {
